--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 
+
 *{
     margin: 0;
     padding: 0;
@@ -75,16 +76,92 @@ nav ul li a:hover::after{
 .image{
     border: 5px solid white;
     border-radius: 50%;
-    width: 400px;
-   
-
- 
-   
-    
+    width: 400px; 
 }
 .img-container{
     
     margin-left: 200px;
     margin-top: 100px;
 
+}
+
+
+ /* ---------------about----------------- */
+ #about{
+    padding:10px 80px 0 0;
+    color: #ababab;
+ }
+ .row{
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+ }
+ .about-col-1{
+    flex-basis: 35%;
+ }
+ .about-col-1 img{
+    width: 100%;
+    border-radius: 15px;
+    margin-top: 90px;
+    
+ }
+ .about-col-2{
+    flex-basis: 60%;
+ }
+ .sub-title{
+    font-size: 60px;
+    font-weight: 600;
+    color: #fff;
+ }
+
+/* -------skills----------- */
+
+
+ .tab-titles{
+    display: flex;
+    margin: 120px 0 40px;
+    justify-content: center;
+ }
+ .tab-links{
+    margin-right: 100px;
+    font-size: 25px;
+    font-weight: bold;
+    cursor: pointer;
+    position: relative;
+
+ }
+
+ .tab-links::after{
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #ff004f;
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: 0.5s;
+ }
+
+.tab-links.active-link::after{
+    width: 50%;
+}
+.tab-contents{
+   margin-left: 350px;
+}
+.tab-contents ul li{
+    list-style: none;
+    margin: 10px 0;
+
+
+}
+.tab-contents ul li span{
+    color: #b54769;
+    font-size: 14px;
+
+}
+.tab-contents{
+    display: none;
+}
+.tab-contents.active-tab{
+    display: block;
 }
