--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
+   
     
 }
 .container{
@@ -20,6 +21,7 @@ body{
 }
 
 nav{
+   
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -116,7 +118,10 @@ nav ul li a:hover::after{
 
 /* -------skills----------- */
 
-
+ .skills{
+   height: 400px;
+    margin-top: 250px;
+ }
  .tab-titles{
     display: flex;
     margin: 120px 0 40px;
@@ -164,4 +169,88 @@ nav ul li a:hover::after{
 }
 .tab-contents.active-tab{
     display: block;
+}
+
+/* -- ---------------Projects------------ -- */
+
+#projects{
+    padding: 50px 0;
+}
+.work-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-gap:40px;
+    margin-top: 50px;
+}
+.work{
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+.work img{
+    width: 100%;
+    height: 400px;
+    
+    border-radius: 10px;
+    display: block;
+    transition: transform 0.5s;
+}
+.layer{
+    width: 100%;
+    height: 0%;
+    background: linear-gradient(rgba(0,0,0,0.6),#ff004f);
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 0 40px;
+    font-size: 14px;
+    transition: height 0.5s;
+}
+.layer h3{
+    font-weight: 500;
+    margin-bottom: 20px;
+
+}
+.layer a{
+    margin-top: 20px;
+    color: #ff004f;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 60px;
+    background: #fff;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    text-align: center;
+}
+.work:hover img{
+    transform: scale(1.1);
+}
+.work:hover .layer{
+    height: 100%;
+}
+.btn{
+    display: block;
+    margin: 50px auto;
+    width: fit-content;
+    border: 1px solid #ff004f;
+    padding: 14px 50px;
+    text-decoration: none;
+    border-radius: 6px;
+    color: #fff;
+    transition: background-color 0.5s;
+    transition: 0.5s;
+
+}
+.btn:hover{
+    background-color: #ff004f;
+    transform: scale(1.1);
+
 }
