--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 
 
+/* ------------header------------- */
+
 *{
     margin: 0;
     padding: 0;
@@ -91,7 +93,7 @@ nav ul li a:hover::after{
  /* ---------------about----------------- */
  #about{
     padding:10px 80px 0 0;
-    color: #ababab;
+    
  }
  .row{
       display: flex;
@@ -116,7 +118,9 @@ nav ul li a:hover::after{
     color: #fff;
  }
 
+
 /* -------skills----------- */
+
 
  .skills{
    height: 400px;
@@ -247,10 +251,79 @@ nav ul li a:hover::after{
     color: #fff;
     transition: background-color 0.5s;
     transition: 0.5s;
+    background-color: #080808;
 
 }
 .btn:hover{
     background-color: #ff004f;
     transform: scale(1.1);
+
+}
+
+/* ----------------contact--------------- */
+
+.contact-left{
+    flex-basis: 35%;
+}
+.contact-right{
+    flex-basis: 60%;
+}
+.contact-left p{
+    margin-top: 30px;
+}
+.contact-left p i{
+    color: #ff004f;
+    margin-right: 15px;
+    font-size: 25px;
+}
+.social-icons{
+    margin-top: 30px;
+}
+.social-icons a{
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    color: #ababab;
+    display: inline-block;
+    transition: transform 0.5s;
+}
+.social-icons a:hover{
+    color: #ff004f;
+    transform: translateY(-5px);
+}
+.btn.btn2{
+    display: inline-block;
+    background-color: #ff004f;
+    font-size: 18px;
+}
+
+.contact-right form{
+ width: 100%;
+}
+form input,form textarea{
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: #262626;
+    padding: 15px;
+    margin: 15px 0;
+    color: #fff;
+    font-size: 18px;
+    border-radius: 6px;
+}
+form .btn2{
+    padding: 14px 60px;
+    font-size: 18px;
+    margin-top: 20px;
+    cursor: pointer;
+
+}
+.copyright{
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    background: #262626;
+    font-weight: 300;
+    margin-top: 20px;
 
 }
