--- a/style.css
+++ b/style.css
@@ -130,10 +130,11 @@ nav ul li a:hover::after{
     display: flex;
     margin: 120px 0 40px;
     justify-content: center;
+    
  }
  .tab-links{
     margin-right: 100px;
-    font-size: 25px;
+    font-size: 50px;
     font-weight: bold;
     cursor: pointer;
     position: relative;
@@ -156,6 +157,10 @@ nav ul li a:hover::after{
 }
 .tab-contents{
    margin-left: 350px;
+   font-size: 20px;
+}
+.tab-contents i{
+    font-size: 30px;
 }
 .tab-contents ul li{
     list-style: none;
